@@ -2,8 +2,9 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.63])
-AC_INIT([mangler], [1.0.0], [eric@ypass.net])
+AC_INIT([mangler], [1.0.1], [eric@ypass.net])
 AM_INIT_AUTOMAKE
+AM_MAINTAINER_MODE([disable])
 
 AC_CONFIG_SRCDIR([config.h.in])
 AC_CONFIG_HEADERS([config.h])
