@@ -1043,7 +1043,7 @@ char ManglerUI[] = "<?xml version=\"1.0\"?>\n"
 "    <property name=\"skip_pager_hint\">True</property>\n"
 "    <property name=\"transient_for\">manglerWindow</property>\n"
 "    <property name=\"program_name\">Mangler</property>\n"
-"    <property name=\"version\">1.0.0</property>\n"
+"    <property name=\"version\">1.0.1</property>\n"
 "    <property name=\"copyright\" translatable=\"yes\">Copyright 2009 by Eric Kilfoil</property>\n"
 "    <property name=\"website\">http://www.mangler.org</property>\n"
 "    <property name=\"website_label\" translatable=\"yes\">http://www.mangler.org</property>\n"
