@@ -1,8 +1,11 @@
 mangler (1.0.1) stable; urgency=low
 
   * Updating license documentation and distribution for compliance
+  * Properly set server options (allow recording, pages, etc) when logging in
+  * Rewrote bin2h.c to comply with GPL
+  * Fixed a crash caused when the configured PTT mouse is removed
 
- -- eric kilfoil <ekilfoil@gmail.com>  Tue, 22 Dec 2009 21:42:48 -0800
+ -- eric kilfoil <ekilfoil@gmail.com>  Sun, 03 Jan 2010 16:15:14 -0800
 
 mangler (1.0.0) stable; urgency=low
 
